--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://i.imgur.com/mCWcjTw.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DAQ Consulting - AI & Data Engineering Experts</title>
     <meta name="description" content="DAQ Consulting specializes in Data Engineering, Data Visualization, Business Intelligence & Analytics, Cloud Modernization, and AI Engineering services." />
