--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://i.imgur.com/mCWcjTw.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DAQ Consulting - AI & Data Engineering Experts</title>
-    <meta name="description" content="DAQ Consulting specializes in Data Engineering, Data Visualization, Business Intelligence & Analytics, Cloud Modernization, and AI Engineering services." />
+    <title>DAQ Consulting - Leading AI & Data Engineering Solutions | Data Analytics Experts</title>
+    <meta name="description" content="DAQ Consulting delivers enterprise-grade data engineering, AI solutions, and cloud modernization services. Transform your business with our expert data analytics and visualization solutions." />
+    <meta name="keywords" content="data engineering, AI solutions, cloud modernization, business intelligence, data analytics, data visualization" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="DAQ Consulting - Leading AI & Data Engineering Solutions" />
+    <meta property="og:description" content="Transform your business with enterprise-grade data engineering, AI solutions, and cloud modernization services." />
+    <meta property="og:image" content="https://i.imgur.com/mCWcjTw.png" />
+    <meta property="og:url" content="https://daqconsulting.com" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
