Add Cookiebot Integration

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
     }
     </script>
     
+    <!-- Cookiebot Consent Management -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="cf433ebc-216b-430d-8e2e-1950208699bb" data-blockingmode="auto" type="text/javascript"></script>
+    
     <!-- Critical CSS inlined for better performance -->
     <style>
       /* Critical above-the-fold styles */
